--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
   "devDependencies": {
     "bootstrap": "^4.0.0-alpha.6",
     "browser-sync": "^2.24.7",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.0.0",
-    "gulp-sass": "^4.0.1"
+    "gulp-csso": "^3.0.1",
+    "gulp-htmlmin": "^4.0.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-uglify": "^3.0.1",
+    "run-sequence": "^2.2.1"
   },
   "scripts": {
     "start": "gulp"
