--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.1.3",
     "browser-sync": "^2.24.7",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
