--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "ParkInhost Website Development",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "jquery": "^3.3.1",
+    "popper": "^1.0.1"
+  },
   "devDependencies": {
     "bootstrap": "^4.1.3",
     "browser-sync": "^2.24.7",
